move legislation of active search display inside of search module.  make search modal to prevent vertical jumping on search, as well as queueing up too  many API requests.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,12 +410,28 @@ nav ul li {
     /* Search container */
     #panel-container #left-container #search-container {
       background-color: #EEEFF1;
-      padding-top: 15px;
+      position:relative;
+    }
+
+    #panel-container #left-container #search-container .search-blocker {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      text-align:center;
+      color: #000;
+      display: none;
+      background:#ccc
+    }
+
+    #panel-container #left-container #search-container .search-blocker span {
+      margin: 5% auto;
+      display: block;
+      font-weight:bold;
     }
 
     #panel-container #left-container #search-container .single-search-container {
       float: left;
-      margin-left: 15px;
+      margin: 15px 0 0 15px;
       padding-bottom: 10px;
     }
     #panel-container #left-container #search-container .single-search-container label {
@@ -426,13 +442,13 @@ nav ul li {
       padding-right: 10px;
     }
 
-    #panel-container #left-container #search-container .single-search-container img.search-loader {
-      visibility: hidden;
-    }
+      #panel-container #left-container #search-container .single-search-container img.search-loader {
+        visibility: hidden;
+      }
 
-    #panel-container #left-container #search-container .single-search-container img.search-loader.searching {
-      visibility: visible;
-    }
+      #panel-container #left-container #search-container .single-search-container img.search-loader.searching {
+        visibility: visible;
+      }
 
     #panel-container #left-container #search-container ul.search-tags {
       margin-bottom: 5px;
